# life-os

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_MAP.md  guide.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-05-desktop-theme-redesign.md  2026-07-08-visual-depth-polish.md  2026-07-10-satoshi-font-migration.md  (+9 more)
src/: App.tsx  CLAUDE.md
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  db.rs  lib.rs
src/components/: Onboarding.tsx
src/lib/: achievement-checker.ts  achievement-display.ts  ai-xp.ts  date-format.ts  db.ts  domain-utils.ts  habit-log-utils.ts  habit-schedule.ts  momentum.ts  navigation.ts  post-action.ts  task-planning.ts  template-presets.ts  text-utils.ts  types.ts  updater.ts  weekly-review-date.ts  xp-engine.ts
src/pages/: Analytics.tsx  Calendar.tsx  CommandCenter.tsx  DomainPage.tsx  Goals.tsx  Habits.tsx  Inbox.tsx  Notes.tsx  Settings.tsx  Tasks.tsx  Templates.tsx  Today.tsx  WeeklyReview.tsx
src/store/: useAppStore.ts  useCalendarStore.ts  useDebugStore.ts  useDomainStore.ts  useErrorStore.ts  useFocusStore.ts  useFrictionStore.ts  useGoalStore.ts  useHabitStore.ts  useInboxStore.ts  useNoteStore.ts  useTaskStore.ts  useTemplateStore.ts  useTimerStore.ts  useUndoStore.ts  useUpdaterStore.ts
src/styles/: globals.css  tokens.css
src/test/: setup.ts
supabase/: README.md  schema.sql
(+62 files in other folders)
